@@ -232,7 +232,7 @@ public class ConnectST extends AbstractST {
         WaitUtils.waitForComponentPodsToRoll(tcc.namespace(), Labels.getConsolePodSelector(tcc.consoleInstanceName()), oldSnap);
 
         String topicName = KafkaTopicUtils.setupTopicsIfNeededAndReturn(tcc.namespace(), tcc.kafkaName(), CONNECTOR_TOPIC, 1, 1, 1, 1)
-            .get(0)
+            .getFirst()
             .getMetadata()
             .getName();
 
