@@ -199,10 +199,10 @@ public class MessagesST extends AbstractST {
         // Formatters
         final DateTimeFormatter timestampFormatterQuery = DateTimeFormatter.ofPattern("yyyy-MM-dd'T'HH:mm:ss");
         final DateTimeFormatter dateFormatterForm = DateTimeFormatter.ofPattern("yyyy-MM-dd");
-        final DateTimeFormatter timeFormatterForm = DateTimeFormatter.ofPattern("hh:mm a");
+        final DateTimeFormatter timeFormatterForm = DateTimeFormatter.ofPattern("HH:mm");
 
         String kafkaTopicName = KafkaTopicUtils.setupTopicsIfNeededAndReturn(tcc.namespace(), tcc.kafkaName(), topicPrefix, TOPIC_COUNT, 1, 1, 1)
-            .get(0).getMetadata().getName();
+            .getFirst().getMetadata().getName();
 
         // Set timestamps
         final OffsetDateTime earlierUtcTime = Instant.now().atOffset(ZoneOffset.UTC).minusMinutes(offsetMinutes);
@@ -215,6 +215,7 @@ public class MessagesST extends AbstractST {
         final String earlierDateTimeUnix = String.valueOf(earlierUtcTime.toEpochSecond());
         final String currentDateForm = currentUtcTime.format(dateFormatterForm);
         final String currentTimeForm = currentLocalTime.format(timeFormatterForm);
+        final String earlierTimeForm = earlierUtcTime.format(timeFormatterForm);
 
         LOGGER.info("Current ISO: {}, Earlier ISO: {}, Current Unix: {}, Earlier Unix: {}",
             currentDateTimeQuery, earlierTimeQuery, currentDateTimeUnix, earlierDateTimeUnix);
@@ -282,7 +283,7 @@ public class MessagesST extends AbstractST {
 
         LOGGER.info("Verifying timestamp filtering using UI popover (ISO mode) (current)");
         MessagesChecks.checkPopoverIsoFilter(tcc, currentDateForm, currentTimeForm, newMessageCount, newMessageText);
-        // TODO: once issue with form resetting earlier dates is resolved, check for earlier sent messages can be added
+        MessagesChecks.checkPopoverIsoFilter(tcc, currentDateForm, earlierTimeForm, oldMessageCount, oldMessageText);
 
         // Verify via UI popover (Unix mode)
         LOGGER.info("Verifying timestamp filtering using UI popover (Unix mode) (current)");
@@ -443,7 +444,7 @@ public class MessagesST extends AbstractST {
         LOGGER.info("Prepare filter messages scenario by creating topic and producing various messages");
 
         kafkaTopicName = KafkaTopicUtils.setupTopicsIfNeededAndReturn(tcc.namespace(), tcc.kafkaName(), TOPIC_PREFIX, TOPIC_COUNT, 1, 1, 1)
-            .get(0).getMetadata().getName();
+            .getFirst().getMetadata().getName();
 
         // Setup UI form filtering
         // First set clients to send messages with KEY
